[package]
name = "micro_ros_msgs"
version = "5.0.2"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde']

[package.metadata.rclrs]
reexport = true
